--- a/templates/map.html
+++ b/templates/map.html
@@ -213,11 +213,11 @@
 	  <div id="info-container">
 		<button type='button' id="km-button">Check km available</button>
 		<h1>Info Will Go Below:</h1>
-		<h2>Note that prices may not be cent for cent accurate as they are not updated real time.</h2>
+		<h2>Note that prices may not be cent for cent accurate as they are not updated real time. Regular fuel prices will be the most accurate.</h2>
 		<h2>Despite inaccuracy in prices, the order represented in the table should indicate the cheapest options.</h2>
 		
 		<form style="margin-bottom: 3vh; margin-top: 1vh;">
-			<fieldset style="width:50%; display: inline;">
+			<fieldset>
 			  <legend style="margin-bottom: 1vh; font-weight: 400;">Please select a fuel type.</legend>
 			  <div>
 				<input type="radio" id='reg-select' name="type" value="Regular" checked/>
@@ -241,7 +241,7 @@
 			<tr>
 				<th>Station Name</th>
 				<th>Station Address</th>
-				<th>Regular Price</th>
+				<th>Price</th>
 				<th>Distance From Route</th>
 			  </tr>
 
